--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,3 +2,5 @@ message(STATUS "Building oe example project.")
 
 add_executable(example main.c)
 target_link_libraries(example PRIVATE oe)
+
+file(COPY assets DESTINATION .)
