--- a/runtime/deps/stb_image/CMakeLists.txt
+++ b/runtime/deps/stb_image/CMakeLists.txt
@@ -2,4 +2,4 @@
 # ~ all -Wextra -Wpedantic flags...
 
 add_library(stb_image STATIC stb_image.c)
-target_link_directories(stb_image PUBLIC .)
+target_include_directories(stb_image PUBLIC .)
