--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,6 +1,6 @@
 message(STATUS "Building oe example project.")
 
 add_executable(example main.c)
-target_link_libraries(example PRIVATE oe)
+target_link_libraries(example PUBLIC oe)
 
 file(COPY assets DESTINATION .)
